error-pages/middleware-error-pages.yaml
# This is global beautiful error pages step 3.. a matching request gets redirected to the error-pages app
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: error-pages
  namespace: error-pages
spec:
  errors:
    status:
      - "400-599"
    query: /{status}.html
    service:
      name: error-pages
      port: 8080
