error-pages/ingressroute-error-pages.yaml
# This is global beautiful error pages step 2.. after the ingress has configured a default backend, any
# unmatched routes will be forwarded to this one, which will then send the error to the middleware...
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: error-pages.${dns_domain}
  namespace: error-pages
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: HostRegexp(`.${dns_domain}`)
    priority: -1
    services:
    - kind: Service
      name: error-pages
      namespace: error-pages
      port: 8080
    middlewares:
      - name: error-pages
